added popup, image resolving

--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,14 @@
 </head>
 
 <body>
+    <div id = "overlay">
+        <p>
+            Wykaz ma charakter wyłącznie informacyjny i jego celem jest ułatwienie pasażerom sprawnego odbycia
+            podróży. Prosimy jednakże pamiętać, że operator kontroli bezpieczeństwa dokonuje samodzielnej decyzji o dopuszczeniu
+            przedmiotu na pokład i pasażer ponosi odpowiedzialność za swoje mienie.
+        </p>
+        <div id = "overlayButton">Rozumiem!</div>
+    </div>
     <div id="mainBody">
 
         <div id="siteBody">
