--- a/static/index.html
+++ b/static/index.html
@@ -59,6 +59,7 @@
                             src="https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png" /></a>
                     <a href="https://twitter.com/PackYourBag2"><img
                             src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-twitter-512.png" /></a>
+                    <a href = "https://www.instagram.com/packyourbag.pl/"><img src = "https://cdn.icon-icons.com/icons2/2037/PNG/512/ig_instagram_media_social_icon_124260.png"/></a>
                 </div>
             </div>
             <div id="luggage">
